# lommix_blog_cms

./: .env.dist  .gitignore  Cargo.toml  README.md  base.css  tailwind.config.js  web.db
src/: api.rs  auth.rs  main.rs  pages.rs  util.rs
src/store/: articles.rs  blog.rs  contacts.rs  mod.rs  paragraphs.rs  stats.rs
static/: main.css  main.js
templates/components/: article_header.html  article_preview_box.html  footer.html  header.html  layout.html  login.html  mail.html  paragraph.html  stats.html  success.html  wsm.html
templates/pages/: about.html  article.html  contact.html  donate.html  error.html  home.html  index.html
templates/pages/about/: index.html
templates/pages/blog/: index.html  test.html
