[package]
name = "lommix_website"
description = "Custom blog CMS"
authors = ["Lorenz Mielke"]
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6.18", features = ["multipart"]}
chrono = "0.4.26"
clap = {version="4.3.21", features=["derive"]}
dotenv = "0.15.0"
markdown = "0.3.0"
mime_guess = "2.0.4"
minijinja = {version = "1.0.5" , features = ["loader"]}
rand = "0.8.5"
rusqlite = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full","fs"] }
tokio-util = {version = "0.7.8", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
